package edu.hitsz.Prop;

public interface PropObserver {
    public void update(int power);
}
